# lesson-summarizer

./: pyproject.toml
app/: streamlit_app.py
src/lesson_summarizer/: chunking.py  cleaning.py  core.py  pdf_export.py
src/lesson_summarizer/llm/: gemini_client.py  prompts.py
src/lesson_summarizer/transcription/: audio.py  youtube.py
